feat: update render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
    - type: web
-     name: kluster
+     name: solocker
      runtime: node
      plan: free
      autoDeploy: true
      buildCommand: pnpm install --no-frozen-lockfile && pnpm run build
      startCommand: pnpm run serve
      env:
-       fromGroup: kluster
+       fromGroup: solocker
