--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@bonfida/token-vesting": "^0.0.9",
     "@fastify/cors": "^9.0.0",
     "@metaplex-foundation/mpl-token-metadata": "^3.1.2",
     "@metaplex-foundation/umi": "^0.9.0",
@@ -21,6 +20,7 @@
     "@raydium-io/raydium-sdk": "1.3.1-beta.47",
     "@solana/spl-token": "^0.3.11",
     "@solana/web3.js": "^1.89.1",
+    "@solocker/vesting": "^0.0.1",
     "axios": "^1.6",
     "axios-cache-interceptor": "^1.3.0",
     "bn.js": "^5.2.1",
@@ -30,6 +30,7 @@
     "firebase-admin": "^12.0.0",
     "graphql-request": "^6.1.0",
     "jsonstream-next": "3.0.0",
+    "redis": "^4.6.13",
     "request": "2.88.2"
   },
   "devDependencies": {
