--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase-admin": "^12.0.0",
     "graphql-request": "^6.1.0",
     "jsonstream-next": "3.0.0",
+    "lodash": "^4.17.21",
     "redis": "^4.6.13",
     "request": "2.88.2"
   },
@@ -38,6 +39,7 @@
     "@types/bn.js": "^5.1.5",
     "@types/bs58": "^4.0.4",
     "@types/jsonstream-next": "3.0.3",
+    "@types/lodash": "^4.17.0",
     "@types/request": "2.48.12",
     "typescript": "^5.3.3"
   }
