--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@metaplex-foundation/umi": "^0.9.0",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.0",
     "@raydium-io/raydium-sdk": "1.3.1-beta.47",
+    "@shyft-to/js": "^0.2.36",
     "@solana/spl-token": "^0.3.11",
     "@solana/web3.js": "^1.89.1",
     "@solocker/vesting": "^0.0.1",
