--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/caching": "^8.3.0",
     "@fastify/cors": "^9.0.0",
+    "@fastify/redis": "^6.1.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.1.2",
     "@metaplex-foundation/umi": "^0.9.0",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.0",
@@ -22,6 +24,8 @@
     "@solana/spl-token": "^0.3.11",
     "@solana/web3.js": "^1.89.1",
     "@solocker/vesting": "^0.0.7",
+    "abstract-cache": "^1.0.1",
+    "abstract-cache-redis": "^2.0.0",
     "axios": "^1.6",
     "axios-cache-interceptor": "^1.3.0",
     "bn.js": "^5.2.1",
@@ -29,6 +33,7 @@
     "dotenv": "^16.4.1",
     "fastify": "^4.25.2",
     "graphql-request": "^6.1.0",
+    "ioredis": "^5.3.2",
     "jsonstream-next": "3.0.0",
     "lodash": "^4.17.21",
     "redis": "^4.6.13",
